--- a/pages/components/icon/icon.wxml
+++ b/pages/components/icon/icon.wxml
@@ -1,6 +1,13 @@
 <!--icon.wxml-->
-<view style="text-align:center;width:100%;margin:100px 0;">
+<navigator url="/pages/index/index">
+
+<view style="text-align:center;width:100%;margin:100px 0;" >
+
 <image src="../../pics/icon.png" mode="aspectFit"
  style="width:150rpx;height:150rpx;border-radius:50rpx;"
- ></image>
+ >
+ </image>
+
  </view>
+
+ </navigator>
