--- a/pages/login/login_page_weapp_ass.wxml
+++ b/pages/login/login_page_weapp_ass.wxml
@@ -1,2 +1,37 @@
 <!--login_page_weapp_ass.wxml-->
-<text>login_page_weapp_ass.wxml</text>
+<!-- 提示用户关联账号 -->
+<!-- 1. -->
+
+
+<import src="../components/info_tip/info_tip" />
+<include src="../components/icon/icon" />
+
+<!-- 用户名输入框 -->
+<view class="weui-cells weui-cells_after-title">
+    <!-- 用户名 -->
+    <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+            <view class="weui-label">用户名</view>
+        </view>
+        <view class="weui-cell__bd">
+            <input bindinput="bindinput" class="weui-input" placeholder="请输入用户名"
+             data-fieldname="username" />
+        </view>
+    </view>
+
+</view>
+
+<!-- 下一步按钮 -->
+<view class="weui-btn-area">
+    <button bindtap="bindtap" class="weui-btn" type="primary" disabled="{{!next_step_available}}" >
+    下一步
+    </button>
+</view>
+
+
+<!--这一段文案，提示用户进行账号关联-->
+
+
+<template is="info_tip" data="{{...tip}}"/>
+
+
